--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 4px;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  width: 100%;
+}
+.profile {
+  margin: 10% 0%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.head {
+  color: maroon;
+  font-size: 2em;
+  font-weight: bold;
+  margin: 0.3em;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.title {
+  font-size: 1em;
+  font-weight: bold;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.detail {
+  text-align: justify;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-mg {
+  margin: 3% 3%;
+}
+.view-img {
+}
+.button {
+  margin-top: 5%;
 }
